# finite-wasm

./: .gitignore  .gitmodules  Cargo.toml  README.mkd  build.rs  deny.toml  flake.nix
.github/workflows/: fuzz.yml  test.yaml
benches/: instrument_all.rs
crates/fwasm-tests/: Cargo.toml
fuzz/: Cargo.toml  compare_to_spec.rs  validity_invariants.rs  validity_invariants_smith.rs
interpreter/exec/: eval.ml
interpreter/host/: spectest.ml
interpreter/main/: flags.ml  main.ml
interpreter/runtime/: func.ml  func.mli  instance.ml
interpreter/script/: js.ml  run.ml  script.ml
interpreter/text/: arrange.ml  lexer.mll  parser.mly
spec/: export-indirection.mkd  runtime.mkd  stack_size.mkd
src/: gas.rs  indirection.rs  instruction_categories.rs  instrument.rs  lib.rs  main.rs  max_stack.rs  partial_sum.rs  test.rs  tests.rs  transform.rs  visitors.rs
src/fuzzers/: compare_to_spec.rs  mod.rs  validity_invariants.rs  validity_invariants_smith.rs
src/gas/: config.rs  cost_model.rs  error.rs  mod.rs  optimize.rs
src/max_stack/: config.rs  error.rs  instruction_visit.rs  mod.rs  test.rs
src/wast_tests/: instrument.rs  runner.rs  test.rs
tests/: call_indirect.wast  component.rs  export_arguments.wast  export_indirect.wast  export_locals.wast  if.wast  labels.wast  memory_fill.wast  select.wast  self.wast  unreachable.wast
tests/local/: many-locals.wast  params-are-locals.wast  regression-45-loop-instrumentation.wast  regression-empty-stack.wast
tests/snaps/: address.wast@instrumented.[directive 0].snap  address.wast@instrumented.[directive 220].snap  address.wast@instrumented.[directive 240].snap  address.wast@instrumented.[directive 93].snap  address.wast@instrumented.snap  address.wast@max_stack.[directive 0].snap  address.wast@max_stack.[directive 220].snap  address.wast@max_stack.[directive 240].snap  address.wast@max_stack.[directive 93].snap  align.wast@instrumented.[directive 0].snap  align.wast@instrumented.[directive 106].snap  align.wast@instrumented.[directive 10].snap  align.wast@instrumented.[directive 11].snap  align.wast@instrumented.[directive 12].snap  align.wast@instrumented.[directive 13].snap  align.wast@instrumented.[directive 14].snap  align.wast@instrumented.[directive 153].snap  align.wast@instrumented.[directive 15].snap  align.wast@instrumented.[directive 16].snap  align.wast@instrumented.[directive 17].snap  align.wast@instrumented.[directive 18].snap  align.wast@instrumented.[directive 19].snap  align.wast@instrumented.[directive 1].snap  align.wast@instrumented.[directive 20].snap  align.wast@instrumented.[directive 21].snap  align.wast@instrumented.[directive 22].snap  align.wast@instrumented.[directive 2].snap  align.wast@instrumented.[directive 3].snap  align.wast@instrumented.[directive 4].snap  align.wast@instrumented.[directive 5].snap  align.wast@instrumented.[directive 6].snap  align.wast@instrumented.[directive 7].snap  align.wast@instrumented.[directive 8].snap  align.wast@instrumented.[directive 9].snap  align.wast@instrumented.snap  align.wast@max_stack.[directive 106].snap  align.wast@max_stack.[directive 153].snap  binary-leb128.wast@instrumented.[directive 0].snap  binary-leb128.wast@instrumented.[directive 10].snap  binary-leb128.wast@instrumented.[directive 13].snap  (+1071 more)
tests/snaps/local/: many-locals.wast@instrumented.snap  params-are-locals.wast@instrumented.snap  regression-45-loop-instrumentation.wast@instrumented.snap  regression-empty-stack.wast@instrumented.snap
tests/snaps/simd/: simd_address.wast@instrumented.[directive 0].snap  simd_address.wast@instrumented.[directive 41].snap  simd_address.wast@instrumented.[directive 44].snap  simd_address.wast@instrumented.snap  simd_address.wast@max_stack.[directive 0].snap  simd_align.wast@instrumented.[directive 0].snap  simd_align.wast@instrumented.[directive 10].snap  simd_align.wast@instrumented.[directive 11].snap  simd_align.wast@instrumented.[directive 12].snap  simd_align.wast@instrumented.[directive 13].snap  simd_align.wast@instrumented.[directive 14].snap  simd_align.wast@instrumented.[directive 15].snap  simd_align.wast@instrumented.[directive 16].snap  simd_align.wast@instrumented.[directive 17].snap  simd_align.wast@instrumented.[directive 18].snap  simd_align.wast@instrumented.[directive 19].snap  simd_align.wast@instrumented.[directive 1].snap  simd_align.wast@instrumented.[directive 20].snap  simd_align.wast@instrumented.[directive 21].snap  simd_align.wast@instrumented.[directive 22].snap  simd_align.wast@instrumented.[directive 23].snap  simd_align.wast@instrumented.[directive 24].snap  simd_align.wast@instrumented.[directive 25].snap  simd_align.wast@instrumented.[directive 26].snap  simd_align.wast@instrumented.[directive 27].snap  simd_align.wast@instrumented.[directive 28].snap  simd_align.wast@instrumented.[directive 29].snap  simd_align.wast@instrumented.[directive 2].snap  simd_align.wast@instrumented.[directive 30].snap  simd_align.wast@instrumented.[directive 31].snap  simd_align.wast@instrumented.[directive 32].snap  simd_align.wast@instrumented.[directive 33].snap  simd_align.wast@instrumented.[directive 34].snap  simd_align.wast@instrumented.[directive 35].snap  simd_align.wast@instrumented.[directive 36].snap  simd_align.wast@instrumented.[directive 37].snap  simd_align.wast@instrumented.[directive 38].snap  simd_align.wast@instrumented.[directive 39].snap  simd_align.wast@instrumented.[directive 3].snap  simd_align.wast@instrumented.[directive 40].snap  (+462 more)
