[package]
name = "finite-wasm"
version = "0.4.0"
edition = "2021"
authors = ["Simonas Kazlauskas <finite-wasm@kazlauskas.me>"]
license = "MIT OR Apache-2.0"
readme = "README.mkd"
repository = "https://github.com/near/finite-wasm"
homepage = "https://github.com/near/finite-wasm"
documentation = "https://docs.rs/finite-wasm"
description = """
Guarantee deterministic limits on execution time and space resources made available to the
WebAssembly programs in a runtime-agnostic way.
"""
exclude = ["/tests/snaps"]

[[test]]
name = "wast"
path = "src/wast_tests/runner.rs"
harness = false
required-features = ["wast-tests"]

[[bench]]
name = "instrument_all"
path = "benches/instrument_all.rs"
harness = false
required-features = ["instrument"]

[dependencies]
bitvec = "1.0.1"
dissimilar = "1"
wasmparser = { git = "https://github.com/bytecodealliance/wasm-tools.git", rev = "627fc96ffcb9fbf7a97ca23fed61eb0dc0f45556" }
# Ensure that we depend on a single version of wasmparser only (patch versions bump wasmparser dep)
wasmprinter = "=0.2.56"
thiserror = "1"
num-traits = "0.2.15"
prefix-sum-vec = "0.1.2"
wasm-encoder = { git = "https://github.com/bytecodealliance/wasm-tools.git", rev = "627fc96ffcb9fbf7a97ca23fed61eb0dc0f45556", optional = true }

[dev-dependencies]
atoi = "2.0.0"
criterion = "0.4.0"
lazy_static = "1.4"
libc = "0.2.144"
rayon = "1.6.1"
tempfile = "3.5"
walkdir = "2.3.0"
wasm-instrument = "0.4"
wast = "52"


[features]
instrument = ["wasm-encoder"]
wast-tests = ["instrument"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "finite_wasm_docs"]
