[package]
name = "fwasm-tests"
publish = false
version = "0.1.0"
edition = "2021"
authors = ["Simonas Kazlauskas <finite-wasm@kazlauskas.me>"]
license = "MIT OR Apache-2.0"
readme = "../../README.mkd"
repository = "https://github.com/near/finite-wasm"
homepage = "https://github.com/near/finite-wasm"
documentation = "https://docs.rs/finite-wasm"
description = """
Transform your WebAssembly modules to guarantee deterministic limits on time and space resources
made available to the programs.
"""

[lib]
harness = false

[dependencies]
wast = "41.0.0"
walkdir = "2.3.0"
thiserror = "1.0.0"
wasmparser = "0.88"
wain-ast = { path = "../wain-ast" }
wain-exec = { path = "../wain-exec" }
